--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width {
@@ -39,4 +40,10 @@ section {
     background-image: url(/images/top-banner.png);
     /* to use image in background */
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
